# video-compressor

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/: CODEOWNERS
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/settings/: config.json
src-tauri/src/: encode_options.rs  lib.rs
src/components/common/: SelectOption.tsx  SettingHeader.tsx  SettingLabel.tsx  ToggleSwitch.tsx
src/components/modal/: ProgressModal.tsx
src/components/section/: CompressionSetting.tsx  ExecuteButton.tsx  FileSelection.tsx  OutputPath.tsx
src/components/section/app-setting/: AppSetting.tsx
src/components/section/app-setting/items/: AppSettingIcon.tsx  OutputSetting.tsx
src/interfaces/: encodeOptions.ts
src/redux/: appSettingSlice.ts  compressionProgress.ts  compressionSettingSlice.ts  store.ts
