[package]
name = "video-compressor"
version = "0.1.0"
description = "A Tauri app to compress videos"
authors = ["KenIsozaki"]
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[lib]
name = "video_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
